Fix for Long bank names overflow

--- a/static/less/pages.less
+++ b/static/less/pages.less
@@ -133,6 +133,14 @@ section[class$="-info"] {
     .name {
       display: block;
     }
+
+    .summary {
+      float: left;
+      overflow: hidden;
+      text-overflow: ellipsis;
+      width: 100%;
+      white-space: nowrap;
+    }
   }
   .actions {
     background-color: @itemIconBackground;
